--- a/file3.html
+++ b/file3.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>File 3</title>
+</head>
+<body>
+  <h1>This is File 3</h1>
+  <button onclick="window.location.href='file1.html';">Back to File 1</button>
+  <button onclick="window.location.href='file2.html';">Back to File 2</button>
+  <button onclick="window.location.href='file4.html';">Open File 4</button>
+</body>
+</html>
